--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -230,6 +230,7 @@ a {
 	-ms-transition: all 0.4s ease-in-out 0s;
 	-o-transition: all 0.4s ease-in-out 0s;
 	transition: all 0.4s ease-in-out 0s;
+	width: 120px;
 }
 
 .img-skill:hover {
@@ -813,14 +814,71 @@ float:left;
 	  margin-top:0;
 	  opacity: 0;
 	}
+	h1 {
+		font-family: 'source serif pro', serif;
+		font-size: 50pt;
+		letter-spacing: -2.5pt;
+		font-weight: bold;
+		line-height: 50pt;
+		margin-bottom: 8pt;
+	}
 
+	.h1-2 {
+		font-family: 'source serif pro', serif;
+		font-size: 45pt;
+		letter-spacing: -2.5pt;
+		font-weight: bold;
+		line-height: 45pt;
+		margin-bottom: 8pt;
+	}
+
+	h2 {
+		font-family: 'open sans', sans-serif;
+		font-size: 15pt;
+		line-height: 20pt;
+		margin-bottom: 20pt;
+		letter-spacing: 3.2pt;
+		text-transform: uppercase;
+	}
+
+	h3 {
+		font-family: 'open sans', sans-serif;
+		font-size: 9pt;
+		line-height: 16pt;
+		margin-bottom: 20pt;
+		letter-spacing: 1pt;
+		font-weight: 600;
+		text-transform: uppercase;
+	}
+
+	p {
+		font-family: 'source serif pro', serif;
+		font-size: 10pt;
+		text-align:justify;
+		line-height: 18pt;
+	}
+
+	a {
+		font-family: 'open sans', sans-serif;
+		font-size: 7pt;
+		line-height: 10pt;
+		color:#1F95BA;
+	}
+	.header2{
+		padding:20px 10%;
+	}
+
+	.img-skill {
+		width: 96px;
+	}
 	/* ---------------------------------------------- /*
 	 * CONTAINERS
 	/* ---------------------------------------------- */
 	.p-container-700{
 		max-width: 100%;
-		margin:auto 5%;
+		margin:auto 10%;
 	}
+
 }
 
 @media only screen and (max-width : 670px) {
@@ -834,4 +892,59 @@ float:left;
   }
 }
 
-@media screen and (max-width:500px){}
+@media screen and (max-width:500px){
+	h1 {
+		font-family: 'source serif pro', serif;
+		font-size: 48pt;
+		letter-spacing: -2pt;
+		font-weight: bold;
+		line-height: 48pt;
+		margin-bottom: 7pt;
+	}
+
+	.h1-2 {
+		font-family: 'source serif pro', serif;
+		font-size: 42pt;
+		letter-spacing: -2pt;
+		font-weight: bold;
+		line-height: 42pt;
+		margin-bottom: 7pt;
+	}
+
+	h2 {
+		font-family: 'open sans', sans-serif;
+		font-size: 14pt;
+		line-height: 16pt;
+		margin-bottom: 16pt;
+		letter-spacing: 2.5pt;
+		text-transform: uppercase;
+	}
+
+	h3 {
+		font-family: 'open sans', sans-serif;
+		font-size: 7pt;
+		line-height: 13pt;
+		margin-bottom: 16pt;
+		letter-spacing: 1pt;
+		font-weight: 600;
+		text-transform: uppercase;
+	}
+
+	p {
+		font-family: 'source serif pro', serif;
+		font-size: 8pt;
+		text-align:justify;
+		line-height: 15pt;
+	}
+
+	a {
+		font-family: 'open sans', sans-serif;
+		font-size: 6pt;
+		line-height: 8pt;
+		color:#1F95BA;
+
+	}
+	.img-skill {
+		width: 76px;
+	}
+}
