--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,10 +1,12 @@
 html {
 	-webkit-font-smoothing: antialiased;
+	height:100%;
 
 }
 
 body{
 		width: 100%;
+		height:100%;
 		border:0;
 		margin:0;
 }
