--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,6 @@
 html {
 	-webkit-font-smoothing: antialiased;
+	overflow-x: hidden;
 
 }
 
@@ -7,6 +8,7 @@ body{
 		width: 100%;
 		border:0;
 		margin:0;
+		overflow-x: hidden;
 }
 
 svg {
