--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,6 +9,10 @@ body{
 		margin:0;
 }
 
+body.modal-open {
+    overflow: visible;
+}
+
 svg {
   width:50%;
 }
@@ -150,6 +154,10 @@ a {
 /* ---------------------------------------------- /*
  * CONTAINERS
 /* ---------------------------------------------- */
+.modal-text-container {
+	margin:20px 15% 0 15%;
+}
+
 .p-container-700{
 	max-width: 500px;
 	margin:auto;
@@ -216,7 +224,7 @@ a {
     -webkit-border-radius: 0px !important;
     -moz-border-radius: 0px !important;
     border-radius: 0px !important;
-		box-shadow: 0px 0px 5px #111 !important;
+		box-shadow: 0px 0px 5px #555 !important;
 		font-family: 'open sans', sans-serif;
 }
 
@@ -740,7 +748,33 @@ animation-fill-mode: forwards;
   z-index: 10;
 	outline: none;
 	font-family: 'merriweather', serif;
+	-o-transition:.4s;
+	  -ms-transition:.4s;
+	  -moz-transition:.4s;
+	  -webkit-transition:.4s;
+	  transition:.4s;
 }
+
+.button_black:hover {
+	background-color: #222;
+	border: solid 2px #111;
+
+}
+
+/*.button_black:hover > .bounce-hover {
+	transform: translate(10px, 0);
+}*/
+
+.bounce-hover {
+	-o-transition:.4s;
+	  -ms-transition:.4s;
+	  -moz-transition:.4s;
+	  -webkit-transition:.4s;
+	  transition:.4s;
+		width:20px;
+}
+
+
 
 .button_oscar {
   border-radius: 0px;
@@ -1116,6 +1150,11 @@ float:left;
 	  opacity: 0;
 	}
 
+.navbar-toggler {
+	position: absolute;
+}
+
+
 	.header2{
 		padding:20px 10%;
 	}
@@ -1248,6 +1287,10 @@ a {
 	padding:75px 75px 75px 75px;
 }
 
+.modal-text-container {
+	margin:20px 5%;
+}
+
 }
 
 
@@ -1263,6 +1306,12 @@ a {
 	}
 	.arrow-down-container{
 		visibility: hidden;
+	}
+
+	.bounce-hover {
+		visibility: hidden;
+		overflow:hidden;
+		position: absolute;
 	}
 	/* ---------------------------------------------- /*
 	 * WRITE ON
