--- a/css/dailyui.css
+++ b/css/dailyui.css
@@ -50,6 +50,23 @@ body {
   font-size: 12px;
   border: 1px solid #000;
 }
+.float-bar2{
+  position:fixed;
+  top:84vh;
+  right:75px;
+  float:right;
+  background-color: ;
+  color:#000;
+  width:75px;
+  height:30px;
+  padding:10px;
+  text-align: center;
+  line-height: 10px;
+  opacity: 1;
+  font-size: 12px;
+  border: 1px solid #000;
+  opacity:0.2;
+}
 
 .container-ui{
   align:center;
@@ -92,6 +109,9 @@ h3{
 }
 
 .scroll{
+  cursor: pointer;
+}
+.scroll-up{
   cursor: pointer;
 }
 
