--- a/css/dailyui.css
+++ b/css/dailyui.css
@@ -115,11 +115,9 @@ h3{
   cursor: pointer;
 }
 
-
-
 .modal-content  {
-    -webkit-border-radius: 0px !important;
-    -moz-border-radius: 0px !important;
+    -webkit-border-radius: 10px !important;
+    -moz-border-radius: 10px !important;
     border-radius: 10px !important;
 		box-shadow: 0px 0px 5px #555 !important;
 		font-family: 'open sans', sans-serif;
@@ -290,5 +288,31 @@ h4 a {
   .modal-body{
     padding:0;
   }
+
+  .title li{
+    text-align:left;
+    margin-left: 0px;
+  }
+
+  .modal-title{
+    margin-left:25px;
+  }
+
+  .modal-dialog {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.modal-content  {
+    -webkit-border-radius: 0px !important;
+    -moz-border-radius: 0px !important;
+    border-radius: 0px !important;
+		box-shadow: 0px 0px 5px #555 !important;
+		font-family: 'open sans', sans-serif;
+    background-color: #f4f4f4;
+    align:center;
+}
 
 }
