--- a/css/dailyui.css
+++ b/css/dailyui.css
@@ -2,6 +2,13 @@ body {
   padding:30px 0;
 }
 
+.modal-header .close {
+    margin-top: -20px;
+}
+.close{
+  font-size:40px;
+}
+
 .top-bar{
   position: fixed;
   top:0;
