--- a/css/dailyui.css
+++ b/css/dailyui.css
@@ -1,12 +1,20 @@
 body {
   padding:30px 0;
 }
-
+.modal-footer{
+  text-align: center;
+  margin-top:-15px;
+}
 .modal-header .close {
     margin-top: -20px;
 }
 .close{
   font-size:40px;
+}
+
+.btn{
+  padding:9px 45px !important;
+  border-radius:5px;
 }
 
 .top-bar{
