--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1093,8 +1093,9 @@ float:left;
 @media screen and (max-width: 768px){
 
 .topgif {
-	display:none;
+	display:none !important;
 }
+	
 .navbar-nav {
 	height: 95vh;
 	padding-top:14vh;
