--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1138,6 +1138,9 @@ float:left;
 
 
 @media screen and (max-width: 768px){
+.topgif {
+	display:none;
+}
 .navbar-nav {
 	height: 95vh;
 	padding-top:14vh;
