--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -26,12 +26,12 @@ svg {
 }
 
 .design-img {
-background: url(https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/backpic4bw.jpg) no-repeat center center;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-	padding: 20vh 0 20vh 0;
+background: url(https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/backpic4bw.jpg) no-repeat center center !important;
+        -webkit-background-size: cover !important;
+        -moz-background-size: cover !important;
+        -o-background-size: cover !important;
+        background-size: cover !important;
+	padding: 20vh 0 20vh 0 !important;
 }
 
 .overflowhidden{
