--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -615,7 +615,7 @@ a {
 .navbar { min-height:38px;   }
  .navbar .navbar-brand{ padding: 0 45px;font-size: 16px;line-height: 38px;height: 38px; }
  .navbar .navbar-nav > li > a {  padding-top: 0px; padding-bottom: 0px; line-height: 38px; }
- .navbar .navbar-toggle {  margin-top: 3px; margin-bottom: 0px; padding: 8px 9px; }
+ .navbar .navbar-toggle {  margin-top: 3px; margin-bottom: 0px; margin-right:35px; padding: 8px 9px; }
  .navbar .navbar-form { margin-top: 2px; margin-bottom: 0px }
 
 
