--- a/css/layout.css
+++ b/css/layout.css
@@ -117,6 +117,7 @@ html, body {
 		max-width:100%;
 		position: relative;
 		top:0;
+		width:100%;
     border-radius: 2px;
     -webkit-transition: all 800ms cubic-bezier(0.645, 0.045, 0.355, 1);
     transition:         all 800ms cubic-bezier(0.645, 0.045, 0.355, 1);
